sand-macros/tests/cases/fail_empty_body.stderr
error[E0277]: the trait bound `i32: IntoCommands` is not satisfied
 --> tests/cases/fail_empty_body.rs:6:5
  |
4 | #[function]
  | ----------- required by a bound introduced by this call
5 | fn wrong_return_type() {
6 |     42i32
  |     ^^^^^ the trait `sand_core::Command` is not implemented for `i32`
  |
  = help: the following other types implement trait `sand_core::Command`:
            AdvancementGrantEverything
            AdvancementGrantFrom
            AdvancementGrantOnly
            AdvancementGrantThrough
            AdvancementGrantUntil
            AdvancementRevokeEverything
            AdvancementRevokeFrom
            AdvancementRevokeOnly
          and $N others
  = note: required for `i32` to implement `IntoCommands`
